Content server: a virtual thread per exchange
An asset-heavy target - a game loading atlases, audio and json - opens as
many connections as the browser allows, across the page, its workers and
any iframes. The fixed pool of 4 sat below even a single tab's per-origin
connection limit, so the browser queued on us. Virtual threads scale with
the machine instead of a constant; large reads still pin their carrier, so
real parallelism is the carrier pool rather than unlimited.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>